# memeplanet

./: .gitignore  README.md  deploy.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: wechat-platform.md  wireframe.html
experiments/: style_previews.py  style_samples.py
packs/: CONTRIBUTING.md  ganfan.yaml  gouzi.yaml  hajimi.yaml  lianai.yaml  maomi.yaml  qimo.yaml  qinglv.yaml  shechu.yaml  yinyang.yaml  yundong.yaml
scripts/: backup-userdata.sh
src/biaoqingbao/: cli.py  webapp.py
src/biaoqingbao/core/: animate.py  compiler.py  generate.py  schema.py
src/biaoqingbao/providers/: gemini.py  seedance.py  seedream.py
src/mememe/: __init__.py  admin.html  cli.py  custom.html  page.html  webapp.py
src/mememe/core/: animate.py  collage.py  compiler.py  fonts.py  generate.py  platform.py  postprocess.py  schema.py  scriptwriter.py  styles.py
src/mememe/providers/: base.py  deepseek.py  gemini.py  seedance.py  seedream.py
tests/: test_animate.py  test_cli.py  test_collage.py  test_compiler.py  test_deepseek_provider.py  test_envfile.py  test_fonts.py  test_gemini_provider.py  test_generate.py  test_platform.py  test_postprocess.py  test_schema.py  test_scriptwriter.py  test_seedance_provider.py  test_seedream_provider.py  test_styles.py  test_webapp.py
web/: README.md
